cmake_minimum_required(VERSION 3.17)
project(learncpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(learncpp main.cpp holamundo.cpp datosbasicos.cpp iodatos.cpp operaciones.cpp preciomasiva.cpp datos.cpp expresiones.cpp ejercicio3.cpp ejercicio4.cpp ejercicio5.cpp intercambio_variables.cpp promedio.cpp promedio2.cpp pitagoras.cpp ejercicio6.cpp cuadrática.cpp condicionif.cpp condswitch.cpp mayor2num.cpp mayor3num.cpp paroimpar.cpp posoneg.cpp vocal.cpp rangoedad.cpp coincidencianum.cpp romanos.cpp meses.cpp meses2.cpp cajero.cpp menu.cpp senwhile.cpp sendowhile.cpp senfor.cpp tablas.cpp guardanumeros.cpp cuadrados.cpp)